# svc-wallet

./: .gitignore  API.md  Dockerfile  IMPLEMENTATION.md  README.md  codes.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  responses.py
alembic/: env.py
alembic/versions/: 97ad75f0f684_add_wallet_operation_type.py  cdba3a405b9f_init.py
app/: codes.py  main.py  responses.py
app/api/: health.py  schemas.py  wallets.py
app/core/: config.py  middleware.py  redis.py  utils.py
app/db/: models.py  session.py
app/repository/: wallet_repository.py
app/service/: wallet_service.py
routes/: health.py
